--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <main>
             <section class="column">
                 <figure>
-                    <img src="Images/Home_Img.jpg" alt="Technology" style="width: 80%; height: auto;">
+                    <img src="Home_Img.jpg" alt="Technology" style="width: 80%; height: auto;">
                     <figcaption>Technology is used in everyones day-to-day lives</figcaption>
                 </figure>
             </section>
