--- a/3D-Printing.html
+++ b/3D-Printing.html
@@ -26,7 +26,7 @@
         <main>
             <section 1 class="column">
                 <figure>
-                    <img src="Images/3D_Printing_Img.jpg" alt="3D Printing Picture" style="width: 80%; height: auto;">
+                    <img src="3D_Printing_Img.jpg" alt="3D Printing Picture" style="width: 80%; height: auto;">
                     <figcaption>You can make any type of creation in a 3-D printer, as long as it's inside its dimensions</figcaption>
                 </figure>
             </section>
