--- a/AI.html
+++ b/AI.html
@@ -24,7 +24,7 @@
         <main>
             <section 1 class="column">
                 <figure>
-                    <img src="Images/AI_Img.jpg" alt="Artificial Intelligence" style="width: 80%; height: auto;">
+                    <img src="AI_Img.jpg" alt="Artificial Intelligence" style="width: 80%; height: auto;">
                     <figcaption>AI was first created in the 50's, but became mainstream in the early 2000's. </figcaption>
                 </figure>
             </section>
