--- a/Template.html
+++ b/Template.html
@@ -24,7 +24,7 @@
         <main>
             <section 1 class="column">
                 <figure>
-                    <img src="Images/Template_Img.jpg" alt="Template Picture" style="width: 80%; height: auto;">
+                    <img src="Template_Img.jpg" alt="Template Picture" style="width: 80%; height: auto;">
                     <figcaption>This is a test This is a test This is a test This is a test This is a test This is a test This is a test This is a test This is a test </figcaption>
                 </figure>
             </section>
