--- a/Virtual-Reality.html
+++ b/Virtual-Reality.html
@@ -24,7 +24,7 @@
         <main>
             <section 1 class="column">
                 <figure>
-                    <img src="Images/Virtual_Reality_Img.jpg" alt="Virtual Reality Picture" style="width: 80%; height: auto;">
+                    <img src="Virtual_Reality_Img.jpg" alt="Virtual Reality Picture" style="width: 80%; height: auto;">
                     <figcaption>Although invented in the late 60's, vr had become popular again and again in the 80's, 90's, and 2010's all the way to the present</figcaption>
                 </figure>
             </section>
