--- a/3D-Printing.html
+++ b/3D-Printing.html
@@ -12,7 +12,7 @@
     <body>
         <header>
             <h1>3-D Printing</h1>
-            <div class="hamburger"><img src="Images/hamburger.png"></div>
+            <div class="hamburger"><img src="hamburger.png"></div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
