--- a/Template.html
+++ b/Template.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <h1>(Enter Title Here)</h1>
-            <div class="hamburger"><img src="Images/hamburger.png"></div>
+            <div class="hamburger"><img src="hamburger.png"></div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
