--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <h1>Home Page</h1>
-            <div class="hamburger"><img src="Images/hamburger.png" alt="hamburger"></div>
+            <div class="hamburger"><img src="hamburger.png" alt="hamburger"></div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
